# manga-bay

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  models.rs  utils.rs
p2p/: Cargo.toml
p2p/src/: behaviour.rs  event.rs  protocol.rs  transport.rs
src/: app.rs  config.rs  discovery.rs  events.rs  lib.rs  main.rs  mod.rs  ratio.rs  resources.rs
src/api/: mod.rs  routes.rs  server.rs  types.rs
src/api/handlers/: chapter.rs  image.rs  manga.rs  mod.rs  node.rs
src/node/: app.rs  discovery.rs  mod.rs  resources.rs
src/p2p/: behaviour.rs  mod.rs  protocol.rs
src/storage/: engine.rs  models.rs
storage/: Cargo.toml
storage/src/: lib.rs
