[package]
name = "manga-bay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-native-tls"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "dns", "kad", "identify", "request-response", "cbor"] }
sysinfo = "0.30"
zip = "0.6"
bytes = "1.5"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
