[package]
name = "manga-bay-storage"
version.workspace = true
edition.workspace = true

[dependencies]
manga-bay-common = { path = "../common" }

zip = "6.0.0"
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true
